--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "target": "es6",
+        "target": "ES2019",
         "module": "commonjs",
         "allowJs": true,
         "sourceMap": true,
@@ -11,5 +11,9 @@
         "baseUrl": "./",
         "typeRoots": ["node_modules/@types"],
         "esModuleInterop": true
-    }
+    },
+    "exclude": [
+        "node_modules",
+        "./node_modules/*"
+      ]
 }
